[package]
name = "tokio_test"
version = "0.1.0"
authors = ["Evgen Druzhynin <evgen.druzhynin@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
rand = "0.3"
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
tokio-timer = "0.1"
tokio-core = "0.1.10"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
structopt = "0.1.0"
structopt-derive = "0.1.0"
bincode = "0.9"
serde = "1.0"
serde_derive = "1.0"

[features]
default = []

[[bin]]
name = "serv"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/client.rs"
